// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infobarActions.shopify.createOrder actions addCustomRow() should add custom row to the payload 1`] = `
Array [
  Object {
    "payload": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "6.00",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "currency": "USD",
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
        "admin_graphql_api_id": "gid://shopify/Customer/2721145061399",
      },
    },
    "type": "infobarActions/shopify/createOrder/SET_PAYLOAD",
  },
  Object {
    "loading": true,
    "message": "Calculating draft order...",
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
  Object {
    "calculatedDraftOrder": Immutable.Map {},
    "type": "infobarActions/shopify/createOrder/SET_CALCULATED_DRAFT_ORDER",
  },
  Object {
    "calculatedDraftOrder": Immutable.Map {
      "appliedDiscount": Immutable.Map {
        "amountV2": Immutable.Map {
          "amount": "5.00",
          "currencyCode": "USD",
        },
      },
      "taxLines": Immutable.List [
        Immutable.Map {
          "priceSet": Immutable.Map {
            "presentmentMoney": Immutable.Map {
              "amount": "0.00",
              "currencyCode": "USD",
            },
          },
          "rate": 0.2,
          "ratePercentage": 20,
          "title": "TVA",
        },
      ],
      "subtotalPrice": "0.00",
      "totalPrice": "0.00",
      "totalShippingPrice": "0.00",
      "totalTax": "0.00",
      "availableShippingRates": Immutable.List [],
    },
    "type": "infobarActions/shopify/createOrder/SET_CALCULATED_DRAFT_ORDER",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.createOrder actions addRow() should add row to the payload 1`] = `
Array [
  Object {
    "payload": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "14.99",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "currency": "USD",
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
        Immutable.Map {
          "variant_admin_graphql_api_id": "gid://shopify/ProductVariant/1",
          "taxable": true,
          "price": "9.99",
          "quantity": 1,
          "product_id": 1,
          "product_exists": true,
          "newly_added": true,
          "properties": Immutable.List [],
          "variant_id": 1,
          "title": "Product 1",
          "sku": "11111",
          "variant_title": "Variant 1",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
        "admin_graphql_api_id": "gid://shopify/Customer/2721145061399",
      },
    },
    "type": "infobarActions/shopify/createOrder/SET_PAYLOAD",
  },
  Object {
    "loading": true,
    "message": "Calculating draft order...",
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
  Object {
    "calculatedDraftOrder": Immutable.Map {},
    "type": "infobarActions/shopify/createOrder/SET_CALCULATED_DRAFT_ORDER",
  },
  Object {
    "products": Map {
      1 => Immutable.Map {
        "id": 1,
        "title": "Product 1",
        "created_at": "2020-01-01 00:00:00.000000",
        "image": Immutable.Map {
          "id": 1,
          "alt": "Alt",
          "src": "src",
        },
        "images": Immutable.List [
          Immutable.Map {
            "id": 1,
            "alt": "Alt",
            "src": "src",
          },
        ],
        "variants": Immutable.List [
          Immutable.Map {
            "taxable": true,
            "admin_graphql_api_id": "gid://shopify/ProductVariant/1",
            "inventory_management": null,
            "price": "9.99",
            "inventory_quantity": 0,
            "title": "Variant 1",
            "id": 1,
            "option1": null,
            "sku": "11111",
            "option2": null,
            "option3": null,
            "image_id": 1,
            "requires_shipping": true,
          },
        ],
      },
    },
    "type": "infobarActions/shopify/createOrder/SET_PRODUCTS",
  },
  Object {
    "calculatedDraftOrder": Immutable.Map {
      "appliedDiscount": Immutable.Map {
        "amountV2": Immutable.Map {
          "amount": "5.00",
          "currencyCode": "USD",
        },
      },
      "taxLines": Immutable.List [
        Immutable.Map {
          "priceSet": Immutable.Map {
            "presentmentMoney": Immutable.Map {
              "amount": "0.00",
              "currencyCode": "USD",
            },
          },
          "rate": 0.2,
          "ratePercentage": 20,
          "title": "TVA",
        },
      ],
      "subtotalPrice": "0.00",
      "totalPrice": "0.00",
      "totalShippingPrice": "0.00",
      "totalTax": "0.00",
      "availableShippingRates": Immutable.List [],
    },
    "type": "infobarActions/shopify/createOrder/SET_CALCULATED_DRAFT_ORDER",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.createOrder actions onEmailInvoice() should display an error 1`] = `
Array [
  Object {
    "loading": true,
    "message": "Creating draft order...",
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
  Object {
    "loading": true,
    "message": "Sending invoice...",
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
  Object {
    "payload": Object {
      "allowHTML": false,
      "buttons": Array [],
      "closeButton": false,
      "closeOnNext": true,
      "dismissAfter": 3000,
      "dismissible": true,
      "id": 1,
      "message": "Executing action...",
      "position": "tc",
      "status": "loading",
      "style": "alert",
    },
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "callback": [Function],
    "data": Object {
      "action_name": "shopifySendDraftOrderInvoice",
      "integration_id": "1",
      "payload": Object {
        "draft_order_id": 1,
        "draft_order_invoice": Object {
          "custom_message": "foo bar",
          "to": "foo@bar.xyz",
        },
        "draft_order_name": "#D123",
        "order_id": 123,
      },
      "ticket_id": 456,
      "user_id": "789",
    },
    "type": "EXECUTE_ACTION_START",
  },
  Object {
    "data": Object {
      "action_name": "shopifySendDraftOrderInvoice",
      "integration_id": "1",
      "payload": Object {
        "draft_order_id": 1,
        "draft_order_invoice": Object {
          "custom_message": "foo bar",
          "to": "foo@bar.xyz",
        },
        "draft_order_name": "#D123",
        "order_id": 123,
      },
      "ticket_id": 456,
      "user_id": "789",
    },
    "error": [Error: Request failed with status code 500],
    "reason": "Failed to execute action shopifySendDraftOrderInvoice on customer #789 for integration 1",
    "type": "EXECUTE_ACTION_ERROR",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.createOrder actions onEmailInvoice() should email invoice 1`] = `
Array [
  Object {
    "loading": true,
    "message": "Creating draft order...",
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
  Object {
    "loading": true,
    "message": "Sending invoice...",
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
  Object {
    "payload": Object {
      "allowHTML": false,
      "buttons": Array [],
      "closeButton": false,
      "closeOnNext": true,
      "dismissAfter": 3000,
      "dismissible": true,
      "id": 1,
      "message": "Executing action...",
      "position": "tc",
      "status": "loading",
      "style": "alert",
    },
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "callback": [Function],
    "data": Object {
      "action_name": "shopifySendDraftOrderInvoice",
      "integration_id": "1",
      "payload": Object {
        "draft_order_id": 1,
        "draft_order_invoice": Object {
          "custom_message": "foo bar",
          "to": "foo@bar.xyz",
        },
        "draft_order_name": "#D123",
        "order_id": 123,
      },
      "ticket_id": 456,
      "user_id": "789",
    },
    "type": "EXECUTE_ACTION_START",
  },
  Object {
    "payload": Object {
      "allowHTML": false,
      "buttons": Array [],
      "closeButton": false,
      "dismissAfter": 3000,
      "dismissible": true,
      "id": 1,
      "message": "Draft order #D123 created, invoice successfully sent",
      "position": "tc",
      "status": "success",
      "style": "alert",
    },
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.createOrder actions onInit() on error should call onError 1`] = `
Array [
  Object {
    "loading": true,
    "message": "Fetching products...",
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
  Object {
    "payload": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "5.00",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "currency": "USD",
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "variant_admin_graphql_api_id": "gid://shopify/ProductVariant/31128766316567",
          "applied_discount": null,
          "taxable": true,
          "initial_quantity": 1,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "lineItem_admin_graphql_api_id": "gid://shopify/CalculatedLineItem/4193100136471",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "variant_admin_graphql_api_id": "gid://shopify/ProductVariant/31128766349335",
          "applied_discount": null,
          "taxable": true,
          "initial_quantity": 4,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "lineItem_admin_graphql_api_id": "gid://shopify/CalculatedLineItem/4193100169239",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
        "email": "apu@gorgias.com",
        "default_address": Immutable.Map {
          "default": true,
          "zip": "",
          "city": "",
          "name": "Apu Nahasapeemapetilon",
          "phone": "",
          "province": "",
          "country_name": "France",
          "last_name": "Nahasapeemapetilon",
          "country_code": "FR",
          "country": "France",
          "first_name": "Apu",
          "id": 2888869838871,
          "customer_id": 2721145061399,
          "province_code": null,
          "company": "",
          "address1": "",
          "address2": "",
        },
        "currency": "USD",
      },
    },
    "type": "infobarActions/shopify/createOrder/SET_PAYLOAD",
  },
  Object {
    "loading": true,
    "message": "Calculating draft order...",
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
  Object {
    "calculatedDraftOrder": Immutable.Map {},
    "type": "infobarActions/shopify/createOrder/SET_CALCULATED_DRAFT_ORDER",
  },
  Object {
    "products": Map {
      8345093387 => Immutable.Map {
        "id": 8345093387,
        "title": "Acidulous candy",
        "created_at": "2020-01-01 00:00:00.000000",
        "image": Immutable.Map {
          "id": 1,
          "alt": "Alt",
          "src": "src",
        },
        "images": Immutable.List [
          Immutable.Map {
            "id": 1,
            "alt": "Alt",
            "src": "src",
          },
        ],
        "variants": Immutable.List [
          Immutable.Map {
            "taxable": true,
            "admin_graphql_api_id": "gid://shopify/ProductVariant/31128766316567",
            "inventory_management": null,
            "price": "1.00",
            "inventory_quantity": 0,
            "title": "Red / A",
            "id": 31128766316567,
            "option1": null,
            "sku": "0987654321-1",
            "option2": null,
            "option3": null,
            "image_id": 1,
            "requires_shipping": true,
          },
          Immutable.Map {
            "taxable": true,
            "admin_graphql_api_id": "gid://shopify/ProductVariant/31128766349335",
            "inventory_management": null,
            "price": "1.00",
            "inventory_quantity": 0,
            "title": "Red / B",
            "id": 31128766349335,
            "option1": null,
            "sku": "0987654321-2",
            "option2": null,
            "option3": null,
            "image_id": 1,
            "requires_shipping": true,
          },
        ],
      },
    },
    "type": "infobarActions/shopify/createOrder/SET_PRODUCTS",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
  Object {
    "payload": Object {
      "allowHTML": true,
      "buttons": Array [],
      "closeButton": false,
      "dismissAfter": 3000,
      "dismissible": true,
      "id": 1,
      "message": "Error while calculating draft order",
      "position": "tc",
      "status": "error",
      "style": "alert",
    },
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.createOrder actions onInit() on success should init the state 1`] = `
Array [
  Object {
    "loading": true,
    "message": "Fetching products...",
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
  Object {
    "payload": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "5.00",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "currency": "USD",
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "variant_admin_graphql_api_id": "gid://shopify/ProductVariant/31128766316567",
          "applied_discount": null,
          "taxable": true,
          "initial_quantity": 1,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "lineItem_admin_graphql_api_id": "gid://shopify/CalculatedLineItem/4193100136471",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "variant_admin_graphql_api_id": "gid://shopify/ProductVariant/31128766349335",
          "applied_discount": null,
          "taxable": true,
          "initial_quantity": 4,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "lineItem_admin_graphql_api_id": "gid://shopify/CalculatedLineItem/4193100169239",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
        "email": "apu@gorgias.com",
        "default_address": Immutable.Map {
          "default": true,
          "zip": "",
          "city": "",
          "name": "Apu Nahasapeemapetilon",
          "phone": "",
          "province": "",
          "country_name": "France",
          "last_name": "Nahasapeemapetilon",
          "country_code": "FR",
          "country": "France",
          "first_name": "Apu",
          "id": 2888869838871,
          "customer_id": 2721145061399,
          "province_code": null,
          "company": "",
          "address1": "",
          "address2": "",
        },
        "currency": "USD",
      },
    },
    "type": "infobarActions/shopify/createOrder/SET_PAYLOAD",
  },
  Object {
    "loading": true,
    "message": "Calculating draft order...",
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
  Object {
    "calculatedDraftOrder": Immutable.Map {},
    "type": "infobarActions/shopify/createOrder/SET_CALCULATED_DRAFT_ORDER",
  },
  Object {
    "products": Map {
      8345093387 => Immutable.Map {
        "id": 8345093387,
        "title": "Acidulous candy",
        "created_at": "2020-01-01 00:00:00.000000",
        "image": Immutable.Map {
          "id": 1,
          "alt": "Alt",
          "src": "src",
        },
        "images": Immutable.List [
          Immutable.Map {
            "id": 1,
            "alt": "Alt",
            "src": "src",
          },
        ],
        "variants": Immutable.List [
          Immutable.Map {
            "taxable": true,
            "admin_graphql_api_id": "gid://shopify/ProductVariant/31128766316567",
            "inventory_management": null,
            "price": "1.00",
            "inventory_quantity": 0,
            "title": "Red / A",
            "id": 31128766316567,
            "option1": null,
            "sku": "0987654321-1",
            "option2": null,
            "option3": null,
            "image_id": 1,
            "requires_shipping": true,
          },
          Immutable.Map {
            "taxable": true,
            "admin_graphql_api_id": "gid://shopify/ProductVariant/31128766349335",
            "inventory_management": null,
            "price": "1.00",
            "inventory_quantity": 0,
            "title": "Red / B",
            "id": 31128766349335,
            "option1": null,
            "sku": "0987654321-2",
            "option2": null,
            "option3": null,
            "image_id": 1,
            "requires_shipping": true,
          },
        ],
      },
    },
    "type": "infobarActions/shopify/createOrder/SET_PRODUCTS",
  },
  Object {
    "calculatedDraftOrder": Immutable.Map {
      "appliedDiscount": Immutable.Map {
        "amountV2": Immutable.Map {
          "amount": "5.00",
          "currencyCode": "USD",
        },
      },
      "taxLines": Immutable.List [
        Immutable.Map {
          "priceSet": Immutable.Map {
            "presentmentMoney": Immutable.Map {
              "amount": "0.00",
              "currencyCode": "USD",
            },
          },
          "rate": 0.2,
          "ratePercentage": 20,
          "title": "TVA",
        },
      ],
      "subtotalPrice": "0.00",
      "totalPrice": "0.00",
      "totalShippingPrice": "0.00",
      "totalTax": "0.00",
      "availableShippingRates": Immutable.List [],
    },
    "type": "infobarActions/shopify/createOrder/SET_CALCULATED_DRAFT_ORDER",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.createOrder actions onInit() on success should init the state when the customer has no currency 1`] = `
Array [
  Object {
    "payload": Immutable.Map {
      "shipping_address": Immutable.Map {
        "default": true,
        "zip": "",
        "city": "",
        "name": "Apu Nahasapeemapetilon",
        "phone": "",
        "province": "",
        "country_name": "France",
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "id": 2888869838871,
        "customer_id": 2721145061399,
        "province_code": null,
        "company": "",
        "address1": "",
        "address2": "",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "default": true,
        "zip": "",
        "city": "",
        "name": "Apu Nahasapeemapetilon",
        "phone": "",
        "province": "",
        "country_name": "France",
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "id": 2888869838871,
        "customer_id": 2721145061399,
        "province_code": null,
        "company": "",
        "address1": "",
        "address2": "",
      },
      "currency": "AUD",
      "note": "",
      "tax_exempt": false,
      "line_items": Immutable.List [],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
        "email": "apu@gorgias.com",
        "default_address": Immutable.Map {
          "default": true,
          "zip": "",
          "city": "",
          "name": "Apu Nahasapeemapetilon",
          "phone": "",
          "province": "",
          "country_name": "France",
          "last_name": "Nahasapeemapetilon",
          "country_code": "FR",
          "country": "France",
          "first_name": "Apu",
          "id": 2888869838871,
          "customer_id": 2721145061399,
          "province_code": null,
          "company": "",
          "address1": "",
          "address2": "",
        },
      },
    },
    "type": "infobarActions/shopify/createOrder/SET_PAYLOAD",
  },
]
`;

exports[`infobarActions.shopify.createOrder actions onPayloadChange() on success should calculate draft order 1`] = `
Array [
  Object {
    "payload": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "5.00",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "currency": "USD",
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
        "admin_graphql_api_id": "gid://shopify/Customer/2721145061399",
      },
    },
    "type": "infobarActions/shopify/createOrder/SET_PAYLOAD",
  },
  Object {
    "loading": true,
    "message": "Calculating draft order...",
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
  Object {
    "calculatedDraftOrder": Immutable.Map {},
    "type": "infobarActions/shopify/createOrder/SET_CALCULATED_DRAFT_ORDER",
  },
  Object {
    "calculatedDraftOrder": Immutable.Map {
      "appliedDiscount": Immutable.Map {
        "amountV2": Immutable.Map {
          "amount": "5.00",
          "currencyCode": "USD",
        },
      },
      "taxLines": Immutable.List [
        Immutable.Map {
          "priceSet": Immutable.Map {
            "presentmentMoney": Immutable.Map {
              "amount": "0.00",
              "currencyCode": "USD",
            },
          },
          "rate": 0.2,
          "ratePercentage": 20,
          "title": "TVA",
        },
      ],
      "subtotalPrice": "0.00",
      "totalPrice": "0.00",
      "totalShippingPrice": "0.00",
      "totalTax": "0.00",
      "availableShippingRates": Immutable.List [],
    },
    "type": "infobarActions/shopify/createOrder/SET_CALCULATED_DRAFT_ORDER",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/createOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.createOrder actions onReset() should reset state 1`] = `
Array [
  Object {
    "type": "infobarActions/shopify/createOrder/SET_INITIAL_STATE",
  },
]
`;
